--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,15 @@
-main {
+main {  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing:border-box;
+}
   max-width: 840px;
 }
 main img {
   width: 150px;
   height: auto;
+  float: right;
 }
 p {
      padding: 0;
@@ -20,9 +26,15 @@ aside {
 aside img {
   width: 200px;
   height: auto;
+   h2 {
+  position: absolute;
+  top: 47px;
+  left: 150px;
+}
 }
 footer {
   margin-top: 15px;
   border-top: 1px solid #000;
   text-align: center;
 }
+/* Class Selectors */
