--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,36 @@
-
-* {
+header{
+  max-width: 840px;
   margin: 0;
-  padding: 0;
+  padding: 1em;
   box-sizing:border-box;
 }
+nav {
+  display: flex;
+  justify-content: center; /* Centers the nav container */
+  background-color: #f8f8f8;
+  padding: 1em 0;
+margin: 0;
+align-items: center;}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly; /* Evenly spaces the nav links */
+  width: 100%; /* Ensures the nav links span the full width of the nav */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body{
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 100%;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
 }
 main {  
-  max-width: 84rem;
+  max-width: 840px;
+  margin: 0 auto;
 }
 main img {
   width: 15rem;
