--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -58,90 +58,90 @@ header nav a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.home-grid h1 {
+.home-title {
     text-align: center;
 }
 
-form ul {
-    list-style: none;
-    padding: 0;
+.button-box {
+    text-align: center;
 }
 
-form li {
-    margin-bottom: 1em;
-}
-
-form label {
-    display: block;
-    margin-bottom: 0.5em;
-}
-
-form input,
-form textarea {
-    width: 100%;
-    padding: 0.5em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-form button {
-    padding: 0.7em 2em;
+.book {
+    display: inline-block;
+    padding: 1em 2em;
     background-color: #333;
     color: #fff;
-    border: none;
+    text-decoration: none;
     border-radius: 4px;
-    cursor: pointer;
 }
 
-form button:hover {
+.book:hover {
     background-color: #555;
 }
 
-.radio-group {
+.river-cards, .camping-cards, .rapid-cards {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 1em;
 }
 
-.radio-group input {
-    margin-right: 0.5em;
+.card-img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
-.company-info {
-    margin-top: 2em;
-}
-
-.company-info h2 {
-    margin-bottom: 0.5em;
-}
-
-.company-info p {
-    margin: 0.5em 0;
-}
-
-.map iframe {
-    width: 100%;
-    height: 450px;
-    border: none; /* Removed inline style from the iframe */
-}
-
-.employee-profiles {
-    margin-top: 2em;
-}
-
-.employee-profiles h2 {
-    text-align: center;
-}
-
-.profile {
-    text-align: center;
+.icon {
+    width: 50px;
+    height: 50px;
     margin: 1em 0;
 }
 
-.profile img {
-    max-width: 200px;
-    border-radius: 50%;
+.msg {
+    text-align: center;
+    margin-top: 2em;
 }
 
-.profile figcaption {
-    margin-top: 0.5em;
-    font-weight:100}
+.msg p {
+    margin: 1em 0;
+}
+
+.join {
+    display: inline-block;
+    padding: 1em 2em;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.join:hover {
+    background-color: #555;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 1em 0;
+    text-align: center;
+}
+
+footer p {
+    margin: 0.5em 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+.social a img {
+    width: 30px;
+    height: 30px;
+    margin: 0 0.5em;
+}
